# adlift-gtm

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: index.py
src/gtm_paid_ai_distribution/: __init__.py  config.py  main.py  sessions.py
src/gtm_paid_ai_distribution/ai/: advisor.py  generation.py  insights.py  llm.py
src/gtm_paid_ai_distribution/analytics/: engine.py
src/gtm_paid_ai_distribution/api/: campaigns.py  chat.py  experiments.py  google.py  integrations.py  questionnaire.py
src/gtm_paid_ai_distribution/campaigns/: models.py  seed.py  service.py  store.py
src/gtm_paid_ai_distribution/chat/: brain.py
src/gtm_paid_ai_distribution/integrations/: base.py  google_ads_real.py  registry.py  stub_adapter.py
src/gtm_paid_ai_distribution/questionnaire/: engine.py  models.py  questions.yaml
src/gtm_paid_ai_distribution/web/: landing.py
src/gtm_paid_ai_distribution/web/static/: app.css  app.js  index.html
tests/: conftest.py  test_app.py
