[project]
name = "gtm-paid-ai-distribution"
version = "0.1.0"
description = "AdLift — AI Campaign Optimizer for B2B SaaS"
readme = "README.md"
authors = [
    { name = "Dominik Klotz", email = "dominik.klotz@askui.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.118.0",
    "fastapi>=0.139.2",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
# Real Google Ads publishing/metrics. Install with: uv sync --extra google
google = ["google-ads>=25.1.0"]

[project.scripts]
gtm-paid-ai-distribution = "gtm_paid_ai_distribution:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
